--- a/style.css
+++ b/style.css
@@ -112,20 +112,26 @@ nav {
 .herosec {
     /* border: red solid; */
     margin-top: 6rem;
-    margin-left: 5rem;
+    /* margin-left: 5rem; */
     height: 75vh;
-    width: 92%;
+    width: 100%;
     display: flex;
+    justify-content: space-around;
 }
 
 #food {
-    /* border: red solid; */
-    transform: translateX(7rem);
-    width: 65%;
+    /* transform: translateX(10rem); */
+    width: 60%;
 }
 
 .left {
     width: 50%;
+    transform: translateX(10rem);
+}
+.op #detail{
+    /* border: red solid; */
+    width: 70%;
+
 }
 
 .right {
@@ -494,13 +500,82 @@ a {
     margin-top: 8rem;
 }
 #review{
-    border: red solid;
+width: 100vw;
+height: 100vh;
+overflow: hidden;
+}
+.k7{
+/* border: red solid; */
+padding-bottom: 2rem;
+}
+
+.activepic{
+    border: rgb(103, 65, 65) solid;
+    padding: 0.2rem;
+    transform: scale(1.15);
+}
+.rev_text{
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;   
+    align-items: center;
+    color: #ffffff;
+    height: 28rem;
+    /* border: red solid; */
+}
+.dsflex_sa{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-around;  
+    /* border: red solid; */
+}
+.us_text{
+    position: absolute;
+    text-align: center;
+    border-radius: 1rem;
+    background: rgb(123, 85, 85);
+    height: 28rem;
+    /* margin: 0rem 15rem; */
+    width: 65%; 
+    display:none;
+
+}
+.us_text.activetext{
+    display: block;
+}
+.us_text p{
+    margin: 2rem 5rem;
+    font-size: 1.6rem;
+}
+.us_text i{
+    font-size: 4rem;
+    margin-top: 2rem;
+    color: #c7afaf;
+}
+.us_text span{
+    /* border: red solid; */
+   font-weight: 600;
+   color: #c7afaf;
+font-size: 2.5rem;
+padding-bottom: 2rem;
+}
+.r_pic{
+    /* border: red solid; */
+    margin-top: 1.8rem;
+    display: flex;
+    gap: 1.5rem;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
+.user_pic{
+    width: 5rem;
+    height: 5rem;
+    object-fit: cover;
+    border-radius: 50%;
 
+}
 .ts {
     height: 100%;
     width: 100%;
@@ -591,8 +666,8 @@ input {
 
 form {
     display: flex;
-    gap: 4rem;
-    margin-top: 2rem;
+    gap: 2rem;
+    /* margin-top: 2rem; */
     /* border: red solid; */
     justify-content: center;
 }
