--- a/style.css
+++ b/style.css
@@ -109,6 +109,18 @@ nav {
     font-size: 1.8rem;
 }
 
+.designbg {
+    position: absolute;
+    right: 0;
+    background: rgb(147, 117, 117);
+    width: 50%;
+    height: 100%;
+    z-index: -1;
+
+    clip-path: polygon(81% 0, 80% 0%, 100% 0, 100% 100%, 80% 100%, 20% 100%, 0 100%, 0 100%);
+
+}
+
 .herosec {
     /* border: red solid; */
     margin-top: 6rem;
@@ -965,34 +977,105 @@ input[type="number"]::-webkit-outer-spin-button {
 .cartsection {
     position: fixed;
     width: 100vw;
-    height: 80vw;
+    height: 100%;
     overflow: hidden;
     background: rgb(211, 186, 186);
     z-index: 98;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    /* border: red solid; */
     display: none;
 
 }
 
 .cart_wraper {
-    width: 80%;
-    padding: 8rem;
-    /* border: red solid; */
-    height: 50%;
+    width: 100vw;
+    padding: 6rem 0rem;
+    height: 80%;
     overflow-y: scroll;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+
 .cartbtnarea {
-    height: 100vh;
-    width: 20%;
+    height: 20%;
+    /* border: red solid; */
+    width: 100vw;
     background: rgb(56, 44, 44);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 2rem;
+    padding-top: 2rem; */
+    color: #ffecec;
+}
+
+.orderfrom_cart {
+    width: 50vw;
+    height: 4rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* border: red solid; */
+}
+
+.orderfrom_cart button {
+    padding: 0.7rem 2rem;
+    background: #c7afaf;
+    border: none;
+    font-size: 1.2rem;
+    font-weight: 500;
+    border-radius: 0.2rem;
+}
+
+.orderfrom_cart span {
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
+.minus_cart,
+.plus_cart {
+    width: 5rem;
+    height: 2rem;
+    color: rgb(103, 65, 65);
+    background: rgb(211, 186, 186);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+
+}
+
+.dis_cart {
+    font-size: 1rem;
+    font-weight: 600;
+    width: 10rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.counter_item {
+    border-radius: 0.2rem;
+    width: 6rem;
+    display: flex;
+    margin-right: 4rem;
+    justify-content: space-between;
+    cursor: pointer;
 }
 
 .img_cart {
     overflow: hidden;
-    height: 8rem;
-    width: 10rem;
+    margin-left: 4rem;
+    height: 6rem;
+    width: 8rem;
     padding: 1rem 0rem;
     object-fit: cover;
     border-radius: 0;
@@ -1000,7 +1083,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .item_cart_title {
-    font-weight: 700;
+    font-weight: 600;
     /* border: red solid; */
     width: 16rem;
     text-align: center;
@@ -1011,13 +1094,12 @@ input[type="number"]::-webkit-outer-spin-button {
 .cart_div_item {
     display: flex;
     justify-content: space-between;
-    padding: 0.2rem 4rem;
     align-items: center;
     background: rgb(103, 65, 65);
     overflow: hidden;
     border-radius: 0.5rem;
     color: #c7afaf;
+    width: 50rem;
+    /* border: red solid; */
 
 }
-
-
