--- a/style.css
+++ b/style.css
@@ -374,9 +374,14 @@ a {
 .active {
     padding: 0.2rem 1.2rem;
     border-radius: 0.3rem;
+    box-shadow: rgba(157, 109, 89, 0.4) -5px 5px,
+        rgba(157, 109, 89, 0.3) -10px 10px,
+        rgba(157, 109, 89, 0.2) -15px 15px,
+        rgba(157, 109, 89, 0.1) -20px 20px,
+        rgba(157, 109, 89, 0.05) -25px 25px;
     color: rgb(247, 198, 198);
     background: rgb(103, 65, 65);
-    border: rgb(103, 65, 65) solid 5px;
+    /* border: rgb(103, 65, 65) solid 5px; */
 }
 
 .nav ul a {
@@ -668,7 +673,8 @@ input {
     margin-bottom: 0.5rem;
     background: #ffecec;
 }
-select{
+
+select {
     outline: none;
     border: none;
     /* width: 38rem; */
@@ -683,7 +689,7 @@ select{
 }
 
 
-#specialRequests{
+#specialRequests {
     outline: none;
     border: none;
     width: 38rem;
@@ -730,7 +736,8 @@ form {
     color: rgb(247, 198, 198);
 }
 
-#btns4,#btns56 {
+#btns4,
+#btns56 {
     font-size: 1.5rem;
     padding: 0.5rem 1.3rem;
     border-radius: 0.5rem;
@@ -1207,33 +1214,40 @@ input[type="number"]::-webkit-outer-spin-button {
     flex-direction: column;
     text-align: right;
 }
-.timesx{
-margin-right:4rem ;
-height: 3rem;
-width: 2.5rem;
-font-size: 1.5rem;
-border: none;
-border-radius: 0.5rem;
-background: rgb(181, 123, 123);
-color: #ffecec;
+
+.timesx {
+    margin-right: 4rem;
+    height: 3rem;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 0.5rem;
+    background: rgb(181, 123, 123);
+    color: #ffecec;
 }
-.cusmrec{
+
+.cusmrec {
     display: flex;
     flex-direction: column;
 }
-.form-group{
+
+.form-group {
     display: flex;
     flex-direction: column;
 }
-#reservationDate,#reservationTime {
+
+#reservationDate,
+#reservationTime {
     background: linear-gradient(to right, #ffecec 87%, #724242 20%, #724242 100%);
 }
-::-webkit-calendar-picker-indicator{
+
+::-webkit-calendar-picker-indicator {
     color: #ffecec;
-fill: #ffecec;
-font-size: 1.2rem;
-filter: invert();
+    fill: #ffecec;
+    font-size: 1.2rem;
+    filter: invert();
 }
+
 input[type="date"]::-moz-calendar-box {
     /* Styles for the calendar drop-down arrow in Firefox */
     color: #ffecec;
@@ -1258,12 +1272,230 @@ input[type="date"]::-moz-calendar-box {
     background-color: #644241;
 }
 
-.btnwrap_form{
+.btnwrap_form {
     display: flex;
     flex-direction: row;
     gap: 2rem;
     /* border: red solid; */
 }
-label{
+
+label {
     padding-left: 1rem;
 }
+
+.rightsidebtn {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.nav ul a:hover {
+    /* border: #644241 solid 3px; */
+    box-shadow: rgba(157, 109, 89, 0.4) 0px 5px,
+        rgba(157, 109, 89, 0.3) 0px 10px,
+        rgba(157, 109, 89, 0.2) 0px 15px,
+        rgba(157, 109, 89, 0.1) 0px 20px,
+        rgba(157, 109, 89, 0.05) 0px 25px;
+    border-radius: 0.5rem;
+    /* padding: 0.5rem 0.5rem; */
+}
+
+
+.menubtn_id {
+    margin-right: 2rem;
+    padding: 0.2rem 1rem;
+    background: transparent;
+    border: #644241 solid 3px;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    outline: none;
+    font-size: 1rem;
+}
+
+.menubtn_id:hover {
+    font-weight: 700;
+    background: #644241;
+    box-shadow: rgba(157, 109, 89, 0.4) 5px 5px,
+        rgba(157, 109, 89, 0.3) 10px 10px,
+        rgba(157, 109, 89, 0.2) 15px 15px,
+        rgba(157, 109, 89, 0.1) 20px 20px,
+        rgba(157, 109, 89, 0.05) 25px 25px;
+    color: #ffecec;
+    border: #644241 solid 3px;
+    /* scale: 1.2; */
+}
+
+.menu_active {
+    font-weight: 700;
+    background: #644241;
+    box-shadow: rgba(157, 109, 89, 0.4) 5px 5px,
+        rgba(157, 109, 89, 0.3) 10px 10px,
+        rgba(157, 109, 89, 0.2) 15px 15px,
+        rgba(157, 109, 89, 0.1) 20px 20px,
+        rgba(157, 109, 89, 0.05) 25px 25px;
+    color: #ffecec;
+    border: #644241 solid 3px;
+}
+
+.menupage {
+    background: rgb(244, 212, 212);
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    z-index: 98;
+    overflow: scroll;
+    display: none;
+}
+
+.search-bar {
+ display: none;
+ background:#ffecec;
+ border-radius: 0.6rem;
+    align-items: center;
+    justify-content: space-around;
+    height: fit-content;
+    width: 50%;
+    height: 3rem;
+}
+.search-bar button{
+    background: transparent;
+    border: none;
+    outline: none;
+}
+.uil-search-alt{
+    font-size: 1.5rem;
+    padding-right: 2rem;
+    color: #b49a98;
+}
+.categories {
+    /* border: red solid; */
+    /* padding-right: 5.5rem; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top:7rem;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.category {
+    all: unset;
+    width: 60px;
+    height: 20px;
+    font-size: 16px;
+    background: transparent;
+    border: none;
+    position: relative;
+    color: #f0f0f0;
+    cursor: pointer;
+    z-index: 1;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.category::after,
+.category::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -99999;
+    transition: all .4s;
+}
+
+.category::before {
+    transform: translate(0%, 0%);
+    width: 100%;
+    height: 100%;
+    background: #b9918f;
+    border-radius: 10px;
+}
+
+.category::after {
+    transform: translate(10px, 10px);
+    width: 35px;
+    height: 35px;
+    background: #ffffff15;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 50px;
+}
+
+.category:hover::before {
+    transform: translate(5%, 20%);
+    width: 100%;
+    height: 100%;
+}
+
+.category:hover::after {
+    border-radius: 10px;
+    border: #6442417e solid 1px;
+    transform: translate(0, 0);
+    width: 100%;
+    height: 100%;
+}
+
+
+/* ======================================= */
+
+.alactive {
+    all: unset;
+    width: 60px;
+    height: 20px;
+    font-size: 16px;
+    background: transparent;
+    border: none;
+    position: relative;
+    color: #f0f0f0;
+    cursor: pointer;
+    z-index: 1;
+    padding: 10px 20px;
+    display: flex;
+    font-weight: 600;
+    text-transform: uppercase;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.alactive::after,
+.alactive::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -99999;
+    transition: all .4s;
+}
+
+/* backgroud */
+.alactive::before {
+    transform: translate(5%, 20%);
+    width: 100%;
+    height: 100%;
+    background: #846665;
+    border-radius: 10px;
+}
+
+/* glasseffect */
+.alactive::after {
+    transform: translate(0, 0);
+    width: 100%;
+    height: 100%;
+    border: #b9918f solid 1px;
+    background: #ffffff15;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 0.5rem;
+}
+
+
