--- a/style.css
+++ b/style.css
@@ -434,7 +434,7 @@ a {
 }
 
 .s1:hover {
-    background: rgb(103, 65, 65);
+    background: #8a554453;
     color: #ffecec;
 }
 
@@ -725,7 +725,7 @@ form {
     justify-content: center;
 }
 
-#btn4 {
+/* #btn4 {
     font-size: 1.5rem;
     padding: 0.8rem 0.8rem;
     border-radius: 0.5rem;
@@ -735,8 +735,108 @@ form {
     border: rgb(114, 66, 66) solid 5px;
     background: rgb(114, 66, 66);
     color: rgb(247, 198, 198);
+} */
+/* ============================================================= */
+
+
+
+
+#btn4,
+#btn4:after {
+  width: 200px;
+  height: 60px;
+  /* line-height: 78px; */
+  font-size: 20px;
+  font-family: 'Bebas Neue', sans-serif;
+  background: linear-gradient(45deg, transparent 5%, #674141 5%);
+  border: 0;
+  color: #fff;
+  letter-spacing: 3px;
+  box-shadow: 6px 0px 0px #f1bb99;
+  outline: transparent;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
+#btn4:after {
+  --slice-0: inset(50% 50% 50% 50%);
+  --slice-1: inset(80% -6px 0 0);
+  --slice-2: inset(50% -6px 30% 0);
+  --slice-3: inset(10% -6px 85% 0);
+  --slice-4: inset(40% -6px 43% 0);
+  --slice-5: inset(80% -6px 5% 0);
+  
+  content: 'ALTERNATE TEXT';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(45deg, transparent 3%, #43c3cf 3%, #52ceaf 5%, #ea3d30 5%);
+  text-shadow: -3px -3px 0px #f6e147, 3px 3px 0px #ff6600;
+  clip-path: var(--slice-0);
+}
+
+#btn4:hover:after {
+  animation: 1s glitch;
+  animation-timing-function: steps(2, end);
+}
+
+@keyframes glitch {
+  0% {
+    clip-path: var(--slice-1);
+    transform: translate(-20px, -10px);
+  }
+  10% {
+    clip-path: var(--slice-3);
+    transform: translate(10px, 10px);
+  }
+  20% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 10px);
+  }
+  30% {
+    clip-path: var(--slice-3);
+    transform: translate(0px, 5px);
+  }
+  40% {
+    clip-path: var(--slice-2);
+    transform: translate(-5px, 0px);
+  }
+  50% {
+    clip-path: var(--slice-3);
+    transform: translate(5px, 0px);
+  }
+  60% {
+    clip-path: var(--slice-4);
+    transform: translate(5px, 10px);
+  }
+  70% {
+    clip-path: var(--slice-2);
+    transform: translate(-10px, 10px);
+  }
+  80% {
+    clip-path: var(--slice-5);
+    transform: translate(20px, -10px);
+  }
+  90% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 0px);
+  }
+  100% {
+    clip-path: var(--slice-1);
+    transform: translate(0);
+  }
+}
+
+
+
+
+
+/* ========================================================== */
 #btns4,
 #btns56 {
     font-size: 1.5rem;
