--- a/style.css
+++ b/style.css
@@ -1189,6 +1189,7 @@ input[type="number"]::-webkit-outer-spin-button {
     font-size: 1.5rem;
     border: none;
     border-radius: 0.2rem;
+    cursor: pointer;
 }
 
 .dis_cart {
@@ -1788,7 +1789,7 @@ text-align: center;
 font-size: 1.8rem;
 }
 #cart_svg {
-height: 20rem;
+height: 17rem;
 }
 
 
@@ -1806,49 +1807,7 @@ height: 20rem;
   position: relative;
   z-index: 0;
   border-radius: 10px;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-85:before {
-  content: "";
-  background: linear-gradient(
-    45deg,
-    #ff0000,
-    #ff7300,
-    #fffb00,
-    #48ff00,
-    #00ffd5,
-    #002bff,
-    #7a00ff,
-    #ff00c8,
-    #ff0000
-  );
-  position: absolute;
-  top: -2px;
-  left: -2px;
-  background-size: 400%;
-  z-index: -1;
-  filter: blur(5px);
-  -webkit-filter: blur(5px);
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
-  animation: glowing-button-85 20s linear infinite;
-  transition: opacity 0.3s ease-in-out;
-  border-radius: 10px;
-}
-
-@keyframes glowing-button-85 {
-  0% {
-    background-position: 0 0;
-  }
-  50% {
-    background-position: 400% 0;
-  }
-  100% {
-    background-position: 0 0;
-  }
+  font-size: 1.2rem;
 }
 
 .button-85:after {
